# cutl

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DOCKER.md  Makefile  README.md  docker-compose.yml  install-from-release.ps1  install-from-release.sh  install.sh  schema.sql  uninstall.sh
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
cli/: Cargo.toml  build.rs
cli/src/: client.rs  config.rs  main.rs  output.rs  validation.rs
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.ts  config.ts  index.css  main.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AnalyticsCard.ts  InstallGuide.ts  ResultCard.ts  ShortenForm.ts
frontend/src/styles/: main.css  themes.css
frontend/src/utils/: clipboard.ts  validation.ts
server/: .env.example  Cargo.toml  Dockerfile  entrypoint.sh
server/src/: config.rs  database.rs  handlers.rs  main.rs  middleware.rs  models.rs  utils.rs
version/: version
