[workspace]
members = ["server", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cutl"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Server dependencies
axum = { version = "0.8", features = ["tokio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
