[package]
name = "cutl-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional server dependencies
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.10", features = ["std", "std_rng", "thread_rng"] }
regex = "1.11"
dotenv = "0.15"
lazy_static = "1.5"
native-tls = "0.2.12"

# Rate limiting
governor = "0.10"
tower_governor = "0.8"
